--- a/frontend/src/styles/frontui.css
+++ b/frontend/src/styles/frontui.css
@@ -1,6 +1,6 @@
 /* styles */
 
-.container-hmpg {
+.info-container-frtui {
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -8,7 +8,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.sub-container-hmpg {
+.sub-container-frtui {
     margin: 20px;
     height: 95vh;
     width: 97%;
@@ -17,25 +17,25 @@
     display: flex;
 }
 
-.content-hmpg {
+.content-frtui {
     margin: 30px 0px 40px 90px;
     flex: 1.4;
     display: flex;
     flex-direction: column;
 }
 
-.heading-hmpg {
+.heading-frtui {
     margin: 0;
     color: #353ea4;
     flex: 1;
 }
 
-.tagline-hmpg {
+.tagline-frtui {
     margin: 0;
     flex: 1.5;
 }
 
-.tagline-head-hmpg {
+.tagline-head-frtui {
     margin: 0;
     text-transform: uppercase;
     color: #1f2998;
@@ -43,19 +43,19 @@
     font-weight: 800;
 }
 
-.tagline-text-hmpg {
+.tagline-text-frtui {
     font-family: 'Open Sans', sans-serif;
     margin: 20px 0px 0px 0px;
     color: #797384;
     font-weight: 600;
 }
 
-.button-hmpg {
+.button-frtui {
     margin: 0;
     flex: 1.5;
 }
 
-.button-hmpg button {
+.button-frtui button {
     font-family: 'Montserrat', sans-serif;
     outline: none;
     font-size: 1em;
@@ -67,16 +67,16 @@
     transition: all 0.3s;
 }
 
-.button-hmpg button:hover {
+.button-frtui button:hover {
     cursor: pointer;
     box-shadow: #4048f0 2px 2px 20px;
 }
 
-.img-hmpg {
+.img-frtui {
     margin: 0;
     flex: 1.6;
 }
 
-.img-hmpg img {
+.img-frtui img {
     width: 100%;
 }
