--- a/frontend/src/styles/summarize.css
+++ b/frontend/src/styles/summarize.css
@@ -48,11 +48,12 @@
     border: none;
     border-radius: 10px;
     background-color: #e1e3f5;
-    font-size: 22px;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     padding: 20px;
     outline: none;
     margin: 0;
+    font-weight: 400;
 }
 
 .btn-smrz {
@@ -65,7 +66,7 @@
 .btn-smrz button {
     font-family: 'Montserrat', sans-serif;
     outline: none;
-    font-size: 1em;
+    font-size: 1rem;
     background-color: #4048f0;
     color: #ffffff;
     padding: 10px 30px;
@@ -80,11 +81,24 @@
     box-shadow: #4048f0 2px 2px 20px;
 }
 
-/*.dropdown-smrz {
-    display: flex;
-}*/
+.dropdown-smrz {
+    margin: 10px 20px;
+}
 
 .dropdown-smrz p {
-    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
+    color: #4048f0;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.dropdown-smrz select {
+    background-color: #e1e3f5;
+    margin-left: 10px;
     padding: 0 10px;
+    border: none;
+    border-radius: 4px;
+    font-size: 1.1rem;
+    outline: none;
 }
