--- a/frontend/src/styles/summarize.css
+++ b/frontend/src/styles/summarize.css
@@ -41,10 +41,13 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.summarize-content-smrz textarea {
+    height: 400px;
+}
+
 .main-content-smrz textarea,
 .summarize-content-smrz textarea {
     width: 85%;
-    height: 400px;
     border: none;
     border-radius: 10px;
     background-color: #e1e3f5;
@@ -54,6 +57,24 @@
     outline: none;
     margin: 0;
     font-weight: 400;
+}
+
+.website-url-smrz {
+    height: 20px;
+}
+
+.main-content-smrz h1 {
+    margin-top: 0;
+}
+
+.main-content-smrz h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #353ea4;
+    margin: 20 0px;
+}
+
+.user-content-smrz {
+    height: 200px;
 }
 
 .btn-smrz {
