👌 IMPROVE: design & loading

--- a/frontend/src/styles/summarize.css
+++ b/frontend/src/styles/summarize.css
@@ -46,6 +46,7 @@
 }
 
 .main-content-smrz textarea,
+.main-content-smrz input,
 .summarize-content-smrz textarea {
     width: 85%;
     border: none;
