--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'airways';
+  src: local('airways'), url(./fonts/airways.ttf) format('truetype');
+}
